# internal/server/dto.go
@@ -149,6 +149,7 @@ type laTokenResponse struct {
 	Platform      model.Platform
 	TokenType     model.LiveActivityTokenType
 	Token         string
+	ActivityID    string `json:"ActivityID,omitempty"`
 	CreatedAt     string
 	LastSeenAt    string
 	ExpiresAt     string
@@ -162,6 +163,7 @@ func toLATokenResponse(token storage.LiveActivityToken) laTokenResponse {
 		Platform:      token.Platform,
 		TokenType:     token.TokenType,
 		Token:         token.Token,
+		ActivityID:    token.ActivityID,
 		CreatedAt:     formatAPITime(token.CreatedAt),
 		LastSeenAt:    formatAPITime(token.LastSeenAt),
 		ExpiresAt:     formatAPIOptionalTime(token.ExpiresAt),
